tests/opaque_type_success/opaque_type_success.exp
Error ---------------------------------------------------------------------------------------------- testimport.js:58:29

Cannot instantiate `$PropertyType` because property `__type` is missing in `C` [1]. [incompatible-use]

   testimport.js:58:29
   58| function t(applicationType: $PropertyType<C, '__type'>): number {
                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   testimport.js:58:43
   58| function t(applicationType: $PropertyType<C, '__type'>): number {
                                                 ^ [1]



Found 1 error
